--- a/README.Rmd
+++ b/README.Rmd
@@ -23,8 +23,7 @@ devtools::install_github("jamie-ralph/statswalesr")
 ```
 ## Example
 
-The code below extracts data about [aircraft movement at Cardiff airport](https://statswales.gov.wales/Catalogue/Transport/Air/ aircraftmovementsatcardiffairport-by-movementtype-year) and the associated
-metadata.
+The code below extracts data about [aircraft movement at Cardiff airport](https://statswales.gov.wales/Catalogue/Transport/Air/aircraftmovementsatcardiffairport-by-movementtype-year) and the associated metadata.
 
 ```{r example, message = FALSE, warning = FALSE, results="hide"}
 library(statswalesr)
