add CI with AppVeyor

--- a/README.Rmd
+++ b/README.Rmd
@@ -4,6 +4,10 @@ output:
     variant: gfm
 ---
 
+<!-- badges: start -->
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/jamie-ralph/statswalesr?branch=master&svg=true)](https://ci.appveyor.com/project/jamie-ralph/statswalesr)
+<!-- badges: end -->
+
 # statswalesr
 
 statswalesr is a package for downloading datasets and their associated metadata
