update statswalesr function examples

--- a/README.Rmd
+++ b/README.Rmd
@@ -28,9 +28,9 @@ The code below extracts data about [aircraft movement at Cardiff airport](https:
 ```{r example, message = FALSE, warning = FALSE, results="hide"}
 library(statswalesr)
 
-metadata <- statswalesr::get_metadata("tran0003")
+metadata <- statswalesr::statswales_get_metadata("tran0003")
 
-df <- statswalesr::get_dataset("tran0003")
+df <- statswalesr::statswales_get_dataset("tran0003")
 ```
 
 ```{r}
