--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,6 @@ The code below extracts data about [aircraft movement at Cardiff airport](https:
 
 ```{r example1, message = FALSE, warning = FALSE, results="hide"}
 library(statswalesr)
-library(dplyr)
 
 metadata <- statswales_get_metadata("tran0003")
 
@@ -49,7 +48,8 @@ df <- statswales_get_dataset("tran0003")
 
 You can also search for datasets based on key terms. For example, to search for datasets related to farming and agriculture:
 
-```{r example2, message = FALSE, warning = FALSE, results="hide"}
+```{r example2, message = FALSE, warning = FALSE}
+library(dplyr)
 
 farming_datasets <- statswales_search(c("farm*", "agri*"))
 
