--- a/README.Rmd
+++ b/README.Rmd
@@ -59,3 +59,8 @@ All statswalesr functions support Welsh language downloads using the **language*
 ```{r example3, message = FALSE, warning = FALSE, results="hide"}
 welsh_df <- statswales_get_dataset("tran0003", language = "welsh")
 ```
+
+---
+
+*Hex sticker by Lew Furber* 
+
