re-render readme file

--- a/README.Rmd
+++ b/README.Rmd
@@ -62,5 +62,5 @@ welsh_df <- statswales_get_dataset("tran0003", language = "welsh")
 
 ---
 
-*Hex sticker by Lew Furber* 
+*Hex sticker by Lew Furber.* 
 
